# hk-legal-caselaw-downloader

./: .env.example  .gitignore  README.md  RESUME_PROMPT.md  docker-compose.yml  pyproject.toml
docs/: backup-coverage-2026-07-06.md  bulk-scraper-plan.md  citation-graph-design.md  d3-runner-design.md  freshness-sanity-check.md  retro-2026-07-06.md  review-patterns.md  ukpc-manual-download.md  viewer-design.md
research/: 01-hklii-platform.md  02-judiciary-platform.md  03-endpoint-reference.md  04-anti-detection-strategy.md  05-http-headers.md  06-tls-http2-fingerprinting.md  07-cookies-sessions-warmup.md  08-vpn-pool.md  09-scraper-architecture.md  10-content-safeguards.md  11-operations-runbook.md  12-decisions-log.md  13-observability.md  README.md
scripts/: expand_vpn_pool.py  freshness_sanity_check.py  generate_compose.py  pia-regions.txt  speedtest_vpn.py  test_vpn.py
tests/: _route_helpers.py  conftest.py  test_atomic_write.py  test_case_translations.py  test_checkpoint.py  test_citations.py  test_citations_db.py  test_cli.py  test_cli_update.py  test_client.py  test_d3.py  test_discovery.py  test_doc_convert.py  test_docs.py  test_enrichment.py  test_enrichment_retry_failed.py  test_enrichment_runner.py  test_enumerator.py  test_events.py  test_expand_vpn_pool.py  test_freshness.py  test_freshness_checkpoint.py  test_freshness_cli.py  test_hopt.py  test_html_generated_columns.py  test_html_generator.py  test_html_recheck.py  test_htmx_swap_helper.py  test_impersonate_client.py  test_integration.py  test_legis.py  test_legis_checkpoint.py  test_legis_history.py  (+42 more)
(+82 files in other folders)
