[project]
name = "hklii-downloader"
version = "0.1.0"
description = "Download judgments from the Hong Kong Legal Information Institute (HKLII)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "click>=8.4.2",
    "curl-cffi>=0.15.0",
    "httpx[socks,http2]>=0.28.1",
    "lxml>=6.1.1",
    "rich>=15.0.0",
    # Viewer stack — local browser UI over the downloaded corpus
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "jinja2>=3.1.0",
]

[project.scripts]
hklii = "hklii_downloader.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hklii_downloader"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
